test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sizeof_void_array.plx
pub fn main(none) i32 {
    #  the element type in an array declarator must be complete
    return sizeof<[3]any>
}
